# poll_app

./: .mypy.ini  Makefile  README.md  pyproject.toml
git-hooks/: pre-commit  pre-push
src/poll_app/: manage.py
src/poll_app/poll_app/: settings.py  urls.py
src/poll_app/polls/: models.py  tests.py  views.py
src/poll_app/polls/migrations/: 0001_initial.py
